--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -12,15 +12,16 @@ phases:
 
   build:
     commands:
-      - echo Buildingspec.yaml the Docker image...
+      - echo Building the Docker image...
       - docker build -t $REPOSITORY_URI:$IMAGE_TAG .  # 构建 Docker 镜像
+
   post_build:
     commands:
       - echo Pushing the Docker image to ECR...
       - docker push $REPOSITORY_URI:$IMAGE_TAG  # 推送镜像到 ECR
       - echo Writing image details to file...
       - echo "{\"imageURI\": \"$REPOSITORY_URI:$IMAGE_TAG\"}" > imageDetail.json  # 输出镜像信息到文件
+
 artifacts:
   files:
     - imageDetail.json  # 将镜像信息文件保存为构建工件，供后续阶段使用
-
