--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -20,8 +20,7 @@ phases:
       - echo "Pushing the Docker image to ECR..."
       - docker push $REPOSITORY_URI:$IMAGE_TAG  # 推送镜像到 ECR
       - echo "Writing image details to file..."
-      - echo "{\"imageURI\": \"$REPOSITORY_URI:$IMAGE_TAG\"}" > imageDetail.json  # 输出镜像信息到文件
+#      - echo "{\"imageURI\": \"$REPOSITORY_URI:$IMAGE_TAG\"}" > imageDetail.json  # 输出镜像信息到文件
 
 artifacts:
-  files:
-    - imageDetail.json  # 将镜像信息文件保存为构建工件，供后续阶段使用
+  files: []
