--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -2,7 +2,7 @@ version: 0.2
 env:
   variables:
     REPOSITORY_URI: "058264261029.dkr.ecr.us-east-1.amazonaws.com/bhuang-devops/backend-api"
-    IMAGE_TAG: "${CODEBUILD_RESOLVED_SOURCE_VERSION:-latest}"  # # 设置默认值为 latest
+    IMAGE_TAG: "${CODEBUILD_RESOLVED_SOURCE_VERSION}"
 
 phases:
   pre_build:
@@ -13,7 +13,8 @@ phases:
   build:
     commands:
       - echo "Building the Docker image..."
-      - docker build -t $REPOSITORY_URI:$IMAGE_TAG .  # 构建 Docker 镜像
+      - echo "CODEBUILD_RESOLVED_SOURCE_VERSION= $CODEBUILD_RESOLVED_SOURCE_VERSION"
+      - docker build -t $REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION .  # 构建 Docker 镜像
 
   post_build:
     commands:
