--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -21,8 +21,8 @@ phases:
       - echo "Pushing the Docker image to ECR..."
       - docker push $REPOSITORY_URI:$IMAGE_TAG  # 推送镜像到 ECR
       - echo "Writing image details to file..."
-      - printf '[{"name": "go-simplehttp", "imageURI": "%s"}]' "$REPOSITORY_URI:$IMAGE_TAG" > imagedefinitions.json  # 使用 printf 输出到文件
+#      - printf '[{"name": "go-simplehttp", "imageURI": "%s"}]' "$REPOSITORY_URI:$IMAGE_TAG" > imagedefinitions.json  # 使用 printf 输出到文件
 
 artifacts:
   files:
-    - imagedefinitions.json  # 将镜像信息文件保存为构建工件，供后续阶段使用
+#    - imagedefinitions.json  # 将镜像信息文件保存为构建工件，供后续阶段使用
