--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -14,15 +14,15 @@ phases:
     commands:
       - echo "Building the Docker image..."
       - echo "CODEBUILD_RESOLVED_SOURCE_VERSION= $CODEBUILD_RESOLVED_SOURCE_VERSION"
-      - docker build -t $REPOSITORY_URI:$IMAGE_TAG .  # 构建 Docker 镜像
+      - docker build -t $REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION .  # 构建 Docker 镜像
 
   post_build:
     commands:
       - echo "Pushing the Docker image to ECR..."
       - docker push $REPOSITORY_URI:$IMAGE_TAG  # 推送镜像到 ECR
       - echo "Writing image details to file..."
-#      - printf '[{"name": "go-simplehttp", "imageURI": "%s"}]' "$REPOSITORY_URI:$IMAGE_TAG" > imagedefinitions.json  # 使用 printf 输出到文件
+      - echo "{\"imageURI:\" \"$REPOSITORY_URI:$IMAGE_TAG\"}" > imageDetail.json  # 输出镜像信息到文件
 
 artifacts:
   files:
-#    - imagedefinitions.json  # 将镜像信息文件保存为构建工件，供后续阶段使用
+    - imageDetail.json
