--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -19,7 +19,7 @@ phases:
   post_build:
     commands:
       - echo "Pushing the Docker image to ECR..."
-      - docker push $REPOSITORY_URI:$IMAGE_TAG  # 推送镜像到 ECR
+      - docker push $REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION  # 推送镜像到 ECR
       - echo "Writing image details to file..."
       - echo "{\"imageURI:\" \"$REPOSITORY_URI:$IMAGE_TAG\"}" > imageDetail.json  # 输出镜像信息到文件
 
