--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -21,7 +21,7 @@ phases:
       - echo "Pushing the Docker image to ECR..."
       - docker push $REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION  # 推送镜像到 ECR
       - echo "Writing image details to file..."
-      - echo "{\"imageURI:\" \"$REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION\"}" > imageDetail.json  # 输出镜像信息到文件
+      - echo "{\"imageURI\":\"$REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION\"}" > imageDetail.json  # 输出镜像信息到文件
 
 artifacts:
   files:
