--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -21,7 +21,14 @@ phases:
       - echo "Pushing the Docker image to ECR..."
       - docker push $REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION  # 推送镜像到 ECR
       - echo "Writing image details to file..."
-      - printf '[{\"imageURI\":\"%s\"}]' "$REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION" > imageDetail.json # 输出镜像信息到文件
+      - |
+        printf '%s' > imageDetail.json <<EOF
+        [
+          {
+            "imageURI": "058264261029.dkr.ecr.us-east-1.amazonaws.com/bhuang-devops/backend-api:${CODEBUILD_RESOLVED_SOURCE_VERSION}"
+          }
+        ]
+        EOF
 
 artifacts:
   files:
