--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -25,7 +25,7 @@ phases:
         cat <<EOF > imageDetail.json
         [
         {
-        "imageURI": "${REPOSITORY_URI}:${$CODEBUILD_RESOLVED_SOURCE_VERSION}"
+        "imageURI": "${REPOSITORY_URI}:${CODEBUILD_RESOLVED_SOURCE_VERSION}"
         }
         ]
         EOF
