--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -2,7 +2,6 @@ version: 0.2
 env:
   variables:
     REPOSITORY_URI: "058264261029.dkr.ecr.us-east-1.amazonaws.com/bhuang-devops/backend-api"
-    IMAGE_TAG: "${CODEBUILD_RESOLVED_SOURCE_VERSION}"
 
 phases:
   pre_build:
@@ -21,7 +20,7 @@ phases:
       - echo "Pushing the Docker image to ECR..."
       - docker push $REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION  # 推送镜像到 ECR
       - echo "Writing image details to file..."
-      - printf '[{"name":"go-simplehttp","imageUri":"${REPOSITORY_URI}:${CODEBUILD_RESOLVED_SOURCE_VERSION}"}]' > imagedefinitions.json
+      - printf '[{"name":"go-simplehttp","imageUri":"%s"}]' "$REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION" > imagedefinitions.json
 
 
 artifacts:
