--- a/.github/workflows/report-opening-issue.yaml
+++ b/.github/workflows/report-opening-issue.yaml
@@ -1,8 +1,8 @@
 name: Report remaining open issues
 on:
-  schedule:
-    # Daily at 8:20 UTC
-    - cron: '42 13 * * *'
+  push:
+    branches:
+      - master
 jobs:
   track_pr:
     runs-on: ubuntu-latest
