--- a/.github/workflows/workflow-command-test.yaml
+++ b/.github/workflows/workflow-command-test.yaml
@@ -47,9 +47,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Check commit message
-        id: check_message
+        id: check_message  # 确保 id 为 check_message
+        #          输出 commit 消息以进行调试
         run: |
           message=$(git log -1 --pretty=%B)
+          echo "Commit message: $message"  
           if [[ "$message" == *"[full-build]"* ]]; then
             echo "build_type=full" >> $GITHUB_OUTPUT
           else
@@ -67,4 +69,3 @@ jobs:
       - name: Run quick build
         if: ${{ needs.check-message.outputs.build_type == 'quick' }}
         run: echo "Running quick build..."
-
