[full-build] test

--- a/.github/workflows/workflow-command-test.yaml
+++ b/.github/workflows/workflow-command-test.yaml
@@ -64,6 +64,9 @@ jobs:
     needs: check-message
     runs-on: ubuntu-latest
     steps:
+      - name: GITHUB_OUTPUT value
+        run: echo "GITHUB_OUTPUT=" ${{ steps.check-message.outputs.build_type }}  # 输出 GITHUB_OUTPUT 的值以进行调试
+
       - name: Run full build
         if: ${{ steps.check-message.outputs.build_type == 'full' }}
         run: echo "Running full build..."
