--- a/.github/workflows/workflow-command-test.yaml
+++ b/.github/workflows/workflow-command-test.yaml
@@ -42,6 +42,8 @@ on: [push]
 jobs:
   check-message:
     runs-on: ubuntu-latest
+    outputs:
+        build_type: ${{ steps.check_message.outputs.build_type }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -68,9 +70,9 @@ jobs:
         run: echo "GITHUB_OUTPUT= ${{ needs.check-message.outputs.build_type }} " # 输出 GITHUB_OUTPUT 的值以进行调试
 
       - name: Run full build
-        if: ${{ steps.check-message.outputs.build_type == 'full' }}
+        if: ${{ needs.check-message.outputs.build_type == 'full' }}
         run: echo "Running full build..."
 
       - name: Run quick build
-        if: ${{ steps.check-message.outputs.build_type == 'quick' }}
+        if: ${{ needs.check-message.outputs.build_type == 'quick' }}
         run: echo "Running quick build..."
