--- a/.github/workflows/context-workflow.yaml
+++ b/.github/workflows/context-workflow.yaml
@@ -5,7 +5,7 @@ on:
 
 env:
   GLOBAL_VAR: "This is a global variable"
-
+# https://docs.github.com/en/enterprise-cloud@latest/actions/writing-workflows/choosing-what-your-workflow-does/accessing-contextual-information-about-workflow-runs#github-context
 jobs:
   show-github-context:
     runs-on: ubuntu-latest
@@ -69,11 +69,41 @@ jobs:
       - name: Run build
         run: echo "Building project..."
 
+# https://docs:github:com/en/enterprise-cloud@latest/actions/writing-workflows/choosing-what-your-workflow-does/accessing-contextual-information-about-workflow-runs#jobs-context:
   test:
     runs-on: ubuntu-latest
     needs: build
+#    needs.build.result：获取 build job 的状态，如果 build 成功，才会执行 test job。
+#    The result of a job in the reusable workflow. Possible values are success, failure, cancelled, or skipped.
     if: ${{ needs.build.result == 'success' }}
     steps:
       - name: Run tests
         run: echo "Running tests..."
 
+  dump_contexts_to_log:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+      - name: Dump job context
+        env:
+          JOB_CONTEXT: ${{ toJson(job) }}
+        run: echo "$JOB_CONTEXT"
+      - name: Dump steps context
+        env:
+          STEPS_CONTEXT: ${{ toJson(steps) }}
+        run: echo "$STEPS_CONTEXT"
+      - name: Dump runner context
+        env:
+          RUNNER_CONTEXT: ${{ toJson(runner) }}
+        run: echo "$RUNNER_CONTEXT"
+      - name: Dump strategy context
+        env:
+          STRATEGY_CONTEXT: ${{ toJson(strategy) }}
+        run: echo "$STRATEGY_CONTEXT"
+      - name: Dump matrix context
+        env:
+          MATRIX_CONTEXT: ${{ toJson(matrix) }}
+        run: echo "$MATRIX_CONTEXT"
