--- a/.github/workflows/context-workflow.yaml
+++ b/.github/workflows/context-workflow.yaml
@@ -15,6 +15,7 @@ on:
         required: true
         type: boolean
 
+
 env:
   GLOBAL_VAR: "This is a global variable"
 # https://docs.github.com/en/enterprise-cloud@latest/actions/writing-workflows/choosing-what-your-workflow-does/accessing-contextual-information-about-workflow-runs#github-context
@@ -77,6 +78,8 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    outputs:
+      build_id: ${{ inputs.build_id }}
     steps:
       - name: Run build
         run: echo "Building project..."
@@ -84,6 +87,8 @@ jobs:
 # https://docs:github:com/en/enterprise-cloud@latest/actions/writing-workflows/choosing-what-your-workflow-does/accessing-contextual-information-about-workflow-runs#jobs-context:
   test:
     runs-on: ubuntu-latest
+    outputs:
+      build_id: ${{ steps.build.outputs.build_id }}
     needs: build
 #    needs.build.result：获取 build job 的状态，如果 build 成功，才会执行 test job。
 #    The result of a job in the reusable workflow. Possible values are success, failure, cancelled, or skipped.
@@ -93,12 +98,15 @@ jobs:
         run: |
           echo "Running tests..."
           echo "needs object: ${{ toJson(needs) }}"
+
   deploy:
     runs-on: ubuntu-latest
+    needs: test
     if: ${{ inputs.perform_deploy }}
     steps:
       - name: Deploy build to target
-        run: echo "Deploying build:${{ inputs.build_id }} to target:${{ inputs.deploy_target }}"
+        run: |
+          echo "Deploying build:${{ inputs.build_id }} to target:${{ inputs.deploy_target }}"
 
   dump_contexts_to_log:
     runs-on: ubuntu-latest
